# group-3-gilded-rose-python-with-tests

./: .gitignore  DEMO_NOTES.md  Makefile  README.md  TODO.md  coverage.xml  pyproject.toml
src/: gilded_rose.py
tests/: gilded_rose_test.py
unit_test_results/: test_results.xml
