[tool.poetry]
name = "group-3-gilded-rose-python-with-tests"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{ include = "group_3_gilded_rose_python_with_tests" }]

[tool.poetry.dependencies]
python = "~3.9.5"
appdirs = "^1.4.4"
argh = "^0.28.1"
colorama = "^0.4.6"
packaging = "^23.1"
pathtools = "^0.1.2"
pyparsing = "^3.0.9"
pyyaml = "^6.0"
six = "^1.16.0"
termstyle = "^0.1.11"
watchdog = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.6"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pylint-pytest = "^1.1.2"
ruff = "^0.0.270"


[tool.coverage.run]
omit = ["*test.py"]

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["E", "W", "F", "PL"]
ignore = ["E501"]

target-version = "py39"

[tool.coverage.report]
show_missing = true

[tool.isort]
# Match up with Black.
profile = "black"

[tool.pytest.ini_options]
minversion = 7.0
testpaths = "tests"
markers = "freeze_time"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
